--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button onclick="chiudiSessione()">🗂️ Chiudi sessione e archivia</button>
 
     <div id="heading">--°</div>
-    <button id="recordBtn" disabled>Invia</button>
+    <button id="recordBtn" disabled>Registra</button>
     <ul id="log"></ul>
     <button onclick="exportRilevamentiPDF()">📄 Esporta rilevamenti in PDF</button>
   </div>
